--- a/Recess_Project_Template/src/our_app/website/templates/index.html
+++ b/Recess_Project_Template/src/our_app/website/templates/index.html
@@ -73,7 +73,7 @@
         <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
             <div class="d-flex justify-content-center">
                 <div class="text-center">
-                    <h1 class="mx-auto my-0 text-uppercase">MAK FEEDBACK</h1>
+                    <h1 class="mx-auto my-0 text-uppercase">STUDENT FEEDBACK</h1>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">A place where we assess our courses, lecturers, and
                         facilities for better learning</h2>
                     <a class="btn btn-primary" href="{% url 'start'%}">Get Started</a>
@@ -97,14 +97,14 @@
                         <div class="form-group">
                             <label for="{{ form.name.id_for_label }}">Name</label>
                             <input class="form-control" id="name" name="name" type="text" {{ form.name }}
-                                placeholder="Enter your name..." aria-label="Enter your name..."
+                                placeholder="Enter your name" aria-label="Enter your name..."
                                 data-sb-validations="required,name" />
                         </div>
 
                         <div class="form-group">
                             <label for="{{ form.studentId.id_for_label }}">studentId</label>
                             <input class="form-control" id="studentId" name="studentId" type="text" {{ form.studentId }}
-                                placeholder="Enter your studentId..." aria-label="Enter your studentId..."
+                                placeholder="Enter your student ID" aria-label="Enter your studentId..."
                                 data-sb-validations="required,contact" />
                         </div>
 
@@ -112,13 +112,13 @@
                             <label for="{{ form.emailAddress.id_for_label }}">Email Address</label>
                             <input class="form-control" id="emailAddress" name="emailAddress" type="email" {{
                                 form.emailAddress }} placeholder="Enter email address..."
-                                aria-label="Enter email address..." data-sb-validations="required,email" />
+                                aria-label="Enter email" data-sb-validations="required,email" />
                         </div>
 
                         <div class="form-group">
                             <label for="{{ form.year_of_study.id_for_label }}">year of study</label>
                             <input class="form-control" id="year_of_study" name="year_of_study" type="text"
-                                placeholder="Enter your year of study..." aria-label="Enter your year of study..." {{
+                                placeholder="Enter your year" aria-label="Enter your year of study..." {{
                                 form.year_of_study }} data-sb-validations="required,contact" />
                         </div>
 
@@ -182,7 +182,7 @@
     </section>
     <!-- Footer-->
     <footer class="footer bg-black small text-center text-white-50">
-        <div class="container px-4 px-lg-5">Copyright &copy; Access</div>
+        <div class="container px-4 px-lg-5">Copyright &copy; student feedback</div>
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
