--- a/Recess_Project_Template/src/our_app/website/templates/thankyou.html
+++ b/Recess_Project_Template/src/our_app/website/templates/thankyou.html
@@ -53,7 +53,7 @@
             <p>We appreciate you taking the time to share your thoughts with us. Your feedback will help us improve the
                 quality of instruction and enhance the learning experience for all students.</p>
             <p>If you have any additional comments or suggestions, feel free to reach out to us anytime.</p>
-            <p>Thank you once again!</p>
+            <p>Thank you once again! Go to <a href="{% url 'home'%}">home</a></p>
         </div>
     </div>
 </body>
